--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynamito",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Connect into your DynamoDb with epic weapons.",
   "main": "dist/index.js",
   "directories": {
@@ -18,6 +18,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.6.5",
     "chai": "^3.2.0",
+    "chai-as-promised": "^6.0.0",
+    "chai-things": "^0.2.0",
     "eslint": "^2.1.0",
     "eslint-config-xo-space": "^0.13.0",
     "eslint-plugin-babel": "^3.1.0",
@@ -28,12 +30,21 @@
     "gulp-mocha": "^2.0.0",
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
-    "isparta": "^4.0.0"
+    "isparta": "^4.0.0",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
     "env": {
       "mocha": true
     }
+  },
+  "dependencies": {
+    "async": "^2.1.4",
+    "aws-sdk": "^2.8.0",
+    "bluebird": "^3.4.7",
+    "cuid": "^1.3.8",
+    "winston": "^2.3.1"
   }
 }
