--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "dynamito",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Connect into your DynamoDb with epic weapons.",
-  "main": "dist/index.js",
   "directories": {
     "test": "test"
   },
@@ -11,6 +10,10 @@
     "test": "gulp"
   },
   "author": "Diego Laucsen",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.9.1",
@@ -24,6 +27,7 @@
     "eslint-config-xo-space": "^0.13.0",
     "eslint-plugin-babel": "^3.1.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.10.3",
