--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.6.5",
     "chai": "^3.2.0",
     "chai-as-promised": "^6.0.0",
