--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^3.2.0",
     "chai-as-promised": "^6.0.0",
     "chai-things": "^0.2.0",
+    "dynamito-memory": "^0.1.0",
     "eslint": "^2.1.0",
     "eslint-config-xo-space": "^0.13.0",
     "eslint-plugin-babel": "^3.1.0",
