--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
   "extends": "airbnb",
   "rules": {
     "no-param-reassign": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "no-restricted-syntax": 0,
+    "no-prototype-builtins": 0,
+    "no-plusplus": 0,
+    "no-continue": 0
   }
 }
