--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "aws-sdk": "^2.8.0",
     "bluebird": "^3.4.7",
     "cuid": "^1.3.8",
+    "lodash": "^4.17.4",
     "winston": "^2.3.1"
   }
 }
