--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-things": "^0.2.0",
+    "del": "^3.0.0",
     "dynamito-memory": "^0.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
